k8s/apps/picca/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: picca-frontend
    app.kubernetes.io/name: picca-frontend
  name: picca-frontend
  namespace: picca
spec:
  replicas: 1
  selector:
    matchLabels:
      app: picca-frontend
      app.kubernetes.io/name: picca-frontend
  template:
    metadata:
      labels:
        app: picca-frontend
        app.kubernetes.io/name: picca-frontend
    spec:
      containers:
        - env:
            - name: PICCA_API_URL
              value: http://picca-apiserver.picca.svc.cluster.local:8080
            - name: PICCA_GRAPHQL_ENDPOINT
              value: https://picca.walnuts.dev/query
            - name: PICCA_S3_EXTERNAL_ENDPOINT
              value: https://picca.seaweedfs.walnuts.dev
            - name: PICCA_IMGPROXY_PUBLIC_URL
              value: https://imgproxy-picca.walnuts.dev
            - name: PICCA_MAPS_URL
              value: https://maps.walnuts.dev
            - name: OTEL_EXPORTER_OTLP_ENDPOINT
              value: http://default-collector.opentelemetry-collector.svc.cluster.local:4318
            - name: OTEL_SERVICE_NAME
              value: picca-frontend
          image: ghcr.io/walnuts1018/picca/frontend:v0.0.96@sha256:3e8832b4eda350039d69f50ce53dad6eae40d7f44b5e7e1c0d9231a1c1dd4532
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 15
          name: frontend
          ports:
            - containerPort: 3000
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 15
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 128Mi
          securityContext:
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - all
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /.cache
              name: cache
      imagePullSecrets:
        - name: ghcr-login-secret
      securityContext:
        fsGroup: 65534
        runAsGroup: 65534
        runAsUser: 10001
      volumes:
        - emptyDir: {}
          name: tmp
        - emptyDir: {}
          name: cache
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: picca-frontend
    app.kubernetes.io/name: picca-frontend
  name: picca-frontend
  namespace: picca
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: picca-frontend
    app.kubernetes.io/name: picca-frontend
  type: ClusterIP
