k8s/apps/picca/imgproxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: picca-imgproxy
    app.kubernetes.io/name: picca-imgproxy
  name: picca-imgproxy
  namespace: picca
spec:
  replicas: 2
  selector:
    matchLabels:
      app: picca-imgproxy
      app.kubernetes.io/name: picca-imgproxy
  template:
    metadata:
      labels:
        app: picca-imgproxy
        app.kubernetes.io/name: picca-imgproxy
    spec:
      containers:
        - env:
            - name: AWS_WEB_IDENTITY_TOKEN_FILE
              value: /var/run/secrets/sts.seaweedfs.com/serviceaccount/token
            - name: AWS_ENDPOINT_URL_STS
              value: http://seaweedfs-default-filer.seaweedfs.svc.cluster.local:8333
            - name: AWS_ROLE_ARN
              value: arn:aws:iam::role/picca
          image: ghcr.io/imgproxy/imgproxy:v4.0.17
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 5
          name: imgproxy
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 8081
              name: metrics
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 5
          resources:
            limits:
              cpu: "1"
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 128Mi
          securityContext:
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - all
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /var/run/secrets/sts.seaweedfs.com/serviceaccount
              name: seaweedfs-sts-token
              readOnly: true
      serviceAccountName: picca
      volumes:
        - name: seaweedfs-sts-token
          projected:
            sources:
              - serviceAccountToken:
                  audience: sts.seaweedfs.com
                  expirationSeconds: 86400
                  path: token
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: picca-imgproxy
    app.kubernetes.io/name: picca-imgproxy
  name: picca-imgproxy
  namespace: picca
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: metrics
      port: 8081
      targetPort: 8081
  selector:
    app: picca-imgproxy
    app.kubernetes.io/name: picca-imgproxy
  type: ClusterIP
